--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "gh-pages": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
